# play_with_fastapi

./: .dockerignore  .env.ci  .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerrun.aws.json  README.md  argocd.yaml  docker-compose-dev.yml  docker-compose.yml  infra-apps.yaml  pyproject.toml
.github/workflows/: cd_dev.yml  check_env.yml  ci.yml  docker_registry.yml  quality.yml  set_env.yml  tests.yml
app/: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  __init__.py  lifecycle.py  main.py  pyproject.toml
app/api/: __init__.py  db_manager.py  messages.py  predict.py  schemas.py
app/db/: __init__.py  db_manager.py  tables_metadata.py
app/kafka/: producer.py
app/mock_external/: __init__.py  mock_authentication.py
app/src/: __init__.py  lifecycle.py  logger.py  main.py
app/src/api/: messages.py  schemas.py
app/src/db/: connection.py  db_manager.py
app/src/kafka/: __init__.py  admin.py  producer.py
app/src/mock_external/: __init__.py  mock_authentication.py
app/tests/: conftest.py
app/tests/test_api/: conftest.py  setup_messages.py  test_messages.py
app_repo/: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  pyproject.toml
app_repo/app/: __init__.py  lifecycle.py  logger.py  main.py
app_repo/app/api/: __init__.py  messages.py  schemas.py
app_repo/app/db/: __init__.py  connection.py  db_manager.py  tables_metadata.py
app_repo/app/kafka/: __init__.py  admin.py  producer.py
app_repo/app/mock_external/: __init__.py  mock_authentication.py
app_repo/tests/: conftest.py
app_repo/tests/test_api/: setup_messages.py  test_messages.py
charts/: helmfile.yaml
charts/app/: Chart.yaml  values.yaml
charts/app/templates/: app-deployment.yaml  app-service.yaml
charts/db/: values.yaml
charts/db/templates/: db-deployment.yaml
charts/worker/: Chart.yaml
helm/: Chart.yaml  helmfile.yaml  infra-apps-dev.yaml
helm/app/: Chart.yaml
helm/charts/app/: Chart.yaml  values.yaml
helm/charts/db/: Chart.yaml  values.yaml
helm/charts/db/templates/: db-deployment.yaml  db-init-configmap.yaml  db-service.yaml  postgres-data-persistentvolumeclaim.yaml
helm/charts/ingress/: Chart.yaml  values.yaml
helm/charts/kafka/: Chart.yaml
helm/charts/kafka/templates/: kafka-deployment.yaml  kafka-service.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
helm/charts/worker/: values.yaml
helm/charts/worker/templates/: worker-deployment.yaml
helm/infra_apps/: argocd.yaml  ingress-nginx.yaml
helm/ingress/templates/: ingress-service.yaml
helm/kafka/: values.yaml
helm/worker/: values.yaml
helm/worker/templates/: worker-service.yaml
infra_apps/: argocd.yaml  ingress-nginx.yaml
k8s/: app-cm0-configmap.yaml  app-deployment.yaml  app-service.yaml  db-cm0-configmap.yaml  db-deployment.yaml  db-init-configmap.yaml  db-service.yaml  evt-message-score.yaml  evt-user-message.yaml  ingress-service.yaml  init-kafka-job.yaml  kafka-deployment.yaml  kafka-service.yaml  postgres-data-persistentvolumeclaim.yaml  worker-cm0-configmap.yaml  worker-deployment.yaml  worker-service.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
kafka_consumer/: Dockerfile  Dockerfile.dev  __init__.py  listener.py  pyproject.toml
kafka_consumer/tests/: conftest.py
kafka_consumer/tests/test_kafka_consumer/: test_listener.py
mock_external/: __init__.py  authentication.py  kafka_consumer.py
processor/: Dockerfile  Dockerfile.dev  consumer.py  pyproject.toml
processor/db/: db_manager.py  utils.py
processor/kafka/: __init__.py  consumer.py
processor/mock_ml/: __init__.py
processor/src/: __init__.py  main.py
processor/src/db/: __init__.py  connection.py
processor/src/mock_ml/: predict.py
processor_repo/: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  pyproject.toml
processor_repo/processor/: __init__.py  lifecycle.py  logger.py  main.py
processor_repo/processor/db/: connection.py  db_manager.py  tables_metadata.py
processor_repo/processor/kafka/: __init__.py  consumer.py  producer.py
processor_repo/processor/mock_ml/: __init__.py  predict.py
setup/: __init__.py  accounts.json  create_tables.py  insert_into.py
setup_db/: 01_create_db.sql  01_create_role.sh  01_create_role.sql  02_create_db.sh  02_create_tables.sql  03_insert_into_accounts.sql  04_insert_into_accounts.sql
worker/: .pre-commit-config.yaml  02_create_db.sql  Dockerfile  Dockerfile.dev  pyproject.toml
worker/src/: lifecycle.py  main.py
worker/src/db/: connection.py
worker/src/kafka/: __init__.py  constants.py  consumer.py  producer.py
worker/src/mock_ml/: __init__.py
