[tool.poetry]
name = "app"
version = "0.1.0"
description = "A demo of a service app predicting text messages"
authors = ["Osher Koren"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.5.2"}
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
databases = {extras = ["postgresql"], version = "^0.8.0"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
