[tool.poetry]
name = "app"
version = "0.1.0"
description = "A demo of a service app predicting text messages"
authors = ["Osher Koren"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.5.2"}
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
databases = {extras = ["postgresql"], version = "^0.8.0"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
confluent-kafka = "^2.3.0"
aiohttp = "^3.9.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
asgi_lifespan = "^2.0.1"
httpx = "^0.26.0"
anyio = {version=">=3.7.1,<4.0.0", extras = ["asyncio"]}  # fastapi restriction of anyio for now


[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
