[tool.poetry]
name = "kafka-consumer"
version = "0.1.0"
description = "mock kafka consumer"
authors = ["Osher Koren"]


[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiokafka = "^0.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
